# sage-lulc-population-mapper

./: Makefile  README.md  pyproject.toml
configs/: default.yaml
frontend/: next.config.js  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Dashboard.tsx  QueryPanel.tsx
src/: logging_config.py
src/data/: feature_engineering.py  feature_engineering_v3.py  loader_v2.py  loader_v3.py  preprocessing_v2.py  preprocessing_v3.py
src/evaluation/: evaluator.py  metrics.py  visualization.py
src/metrics/: collector.py
src/models/: attention.py  attention_v2.py  attention_v3.py  backbone_v2.py  backbone_v3.py  heads.py  heads_v2.py
src/serving/: api.py  inference.py
src/training/: optimizer.py  optimizer_v2.py  optimizer_v3.py  scheduler.py  trainer_v2.py  trainer_v3.py
src/types/: stubs.py
src/utils/: config.py  logging_utils.py  sage_connector.py
tests/: test_api.py  test_evaluation.py  test_integration.py  test_loader.py  test_model.py  test_training.py
